# lockedin-clone

./: .env.example  .gitignore
api/: package.json  pnpm-lock.yaml
api/src/: app.module.ts  main.ts
api/src/ai/: ai.service.ts
api/src/audio/: audio.gateway.ts  audio.module.ts  audio.service.ts
api/src/shared-types/: types.ts
api/src/transcription/: transcription.module.ts  transcription.service.ts
apps/desktop/: package.json
desktop/: package.json  pnpm-lock.yaml
desktop/src/: App.css  App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: audio.rs  lib.rs  main.rs
desktop/src/common/: types.ts
